admin: simulação de cenário e suporte ao mata-mata
- Simulação de cenário (/admin/simulate): criar usuários sim_*, gerar
  palpites aleatórios, avançar resultados por fase e limpar dados
- Fase eliminatória completa na simulação: R32, R16, QF, SEMI, SF e
  Final — times atribuídos automaticamente a partir dos vencedores de
  cada fase anterior
- Migração V21: adiciona estágio SEMI (Semifinal, 2 partidas), corrige
  nome do QF para Quartas de Final e insere 32 partidas do mata-mata
  (jogos 73–104) com times nulos e datas de julho/2026
- Repositórios: clearAllPointsEarned em todos os tipos de palpite,
  resetAllResults e clearKnockoutTeams em MatchRepository, queries
  LEFT JOIN FETCH para partidas com times nulos
- Admin /special-results: corrige dropdowns vazios — usa GroupRow DTO
  para evitar acesso via subscript de mapa no Thymeleaf, e
  findAllWithTeams() para evitar LazyInitializationException

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>